fixed weird spacing thingy

--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ html, body {
       outline-width: 0.4vw;
     }
     .podcastTitle {
-      top:16vh;
-      left:23.5vw;
+      top: 8.75vw;
+      left: 20vw;
       position: absolute;
       color:black;
       font-style: bold;
@@ -116,8 +116,8 @@ html, body {
   .podcastSubtitle {
     text-align: left;
     position: absolute;
-    left: 23.5vw;
-    top: 19vh;
+    left: 20vw;
+    top: 10vw;
     color:black;
     font-family: arial;
     font-style: italic;
